refactor: 코드 정리 - 중복 제거, 스크립트 변경, 레거시 문서 삭제
- 루트 중복 제거: hass_install, matterhub.service, matterhub.sh, server_install, wifi_config, wpa_supplicant → device_config만 유지
- device_config: matterhub.service/sh, server_install.sh 경로·동작 정리
- 레거시/미사용 삭제: sub/mqtt.py, sub/configure.py, sub/localIp.py
- 레거시 문서 삭제: .env.example, API_SPEC.json, HISTORY_GUIDE.md

--- a/device_config/matterhub.service
+++ b/device_config/matterhub.service
@@ -3,9 +3,9 @@ Description=matterhub
 After=network.target
 
 [Service]
-User=matterhub
-WorkingDirectory=/home/matterhub/Desktop
-ExecStart=sh /home/matterhub/Desktop/matterhub/matterhub.sh
+User=whatsmatter
+WorkingDirectory=/home/whatsmatter/Desktop/matterhub
+ExecStart=sh /home/whatsmatter/Desktop/matterhub/device_config/matterhub.sh
 Restart=always
 RestartSec=5
 #Environment="PYTHONPATH=/usr/lib/python3/dist-packages"
